# ZGameLib

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: games.rs  launcher.rs  logger.rs  mod.rs  modloader.rs  scanner.rs  settings.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src/components/: ErrorBoundary.tsx
src/components/game/: GameDetail.tsx  GameNotes.tsx  ModLoaderPanel.tsx  ModsPromoPanel.tsx
src/components/layout/: Layout.tsx  PageSearch.tsx  Sidebar.tsx  Topbar.tsx
src/components/modals/: AddGameModal.tsx  ConfirmModal.tsx  CoverSearchModal.tsx  WhatsNewModal.tsx
src/components/ui/: Badge.tsx  EmptyState.tsx  GameContextMenu.tsx  GlassCard.tsx  Icons.tsx  LogPanel.tsx  PlatformBadge.tsx  ScrollToTop.tsx  StarRating.tsx  Toast.tsx
src/hooks/: useCover.ts  useGames.ts
src/lib/: tauri.ts  types.ts  useLaunchGame.ts  utils.ts
src/pages/: Favorites.tsx  Library.tsx  RecentlyPlayed.tsx  Settings.tsx  Spin.tsx  Stats.tsx
src/store/: useGameStore.ts  useUIStore.ts
