[package]
name = "zgamelib"
version = "1.2.0"
description = "ZGameLib - Personal Game Library"
authors = ["TheHolyOneZ"]
license = "MIT"
repository = "https://github.com/TheHolyOneZ/ZGameLib"
edition = "2021"

[lib]
name = "zgamelib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
open = "5"
ureq = { version = "2", features = ["tls"] }
zip = "0.6"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Diagnostics_Etw", "Win32_NetworkManagement_IpHelper", "Win32_System_Performance"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
